objects/GlobalFoundry_View__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CipherCloudURLCheck__c</fullName>
        <label>CipherCloudURLCheck</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCipherCloudURLCheck__c</fullName>
        <label>eCipherCloudURLCheck</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GlobalFoundry View</label>
</CustomObject>